# exarch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  release.yml
benches/: README.md  compare_node.js  compare_python.py  run_all.sh
benches/fixtures/: generate_fixtures.sh
crates/exarch-cli/: Cargo.toml  README.md
crates/exarch-cli/src/: cli.rs  error.rs  main.rs  progress.rs
crates/exarch-cli/src/commands/: completion.rs  create.rs  extract.rs  list.rs  mod.rs  verify.rs
crates/exarch-cli/src/output/: formatter.rs  human.rs  json.rs  mod.rs
crates/exarch-cli/tests/: cli_tests.rs
crates/exarch-cli/tests/fixtures/: create_fixture.sh
crates/exarch-core/: Cargo.toml  README.md
crates/exarch-core/benches/: creation.rs  extraction.rs  progress.rs  validation.rs
crates/exarch-core/examples/: create_archive.rs  dhat_creation.rs  dhat_extraction.rs
crates/exarch-core/src/: api.rs  archive.rs  config.rs  copy.rs  error.rs  lib.rs  report.rs  test_utils.rs
crates/exarch-core/src/creation/: compression.rs  config.rs  creator.rs  filters.rs  mod.rs  progress.rs  report.rs  tar.rs  walker.rs  zip.rs
crates/exarch-core/src/error/: messages.rs  mod.rs  types.rs
crates/exarch-core/src/extraction/: atomic.rs  engine.rs  mod.rs  stream.rs
crates/exarch-core/src/formats/: common.rs  compression.rs  detect.rs  mod.rs  sevenz.rs  tar.rs  traits.rs  zip.rs
crates/exarch-core/src/inspection/: list.rs  manifest.rs  mod.rs  report.rs  verify.rs
crates/exarch-core/src/io/: counting.rs  mod.rs
crates/exarch-core/src/security/: context.rs  hardlink.rs  mod.rs  path.rs  permissions.rs  quota.rs  symlink.rs  validator.rs  zipbomb.rs
crates/exarch-core/src/types/: dest_dir.rs  entry_type.rs  mod.rs  safe_path.rs  safe_symlink.rs
crates/exarch-core/tests/: integration_tests.rs  property_tests.rs  sevenz_integration.rs  skip_duplicates_integration.rs  zip_family_integration.rs
crates/exarch-core/tests/security/: cve_regression.rs  mod.rs
crates/exarch-node/: Cargo.toml  README.md  biome.json  build.rs  index.d.ts  package-lock.json  package.json  pnpm-lock.yaml
crates/exarch-node/src/: config.rs  error.rs  lib.rs  report.rs  utils.rs
crates/exarch-node/tests/: create.test.js  creation-config.test.js  extract.test.js  extraction-options.test.js  list-verify.test.js  security-config.test.js
crates/exarch-python/: Cargo.toml  README.md  exarch.pyi  pyproject.toml
crates/exarch-python/src/: config.rs  error.rs  lib.rs  report.rs
crates/exarch-python/tests/: README.md  __init__.py  conftest.py  test_cve_regression.py  test_extract_archive.py  test_extraction_options.py  test_security_config.py
crates/exarch-python/tests/fixtures/: README.md  cve-2024-12905-symlink-escape.tar  cve-2025-48387-hardlink.tar  generate_fixtures.py
specs/: MOC-specs.md  constitution.md
specs/001-exarch-system/: plan.md  spec.md
specs/001-security-pipeline/: spec.md  tasks.md
specs/002-format-handlers/: spec.md  tasks.md
specs/003-config-api/: spec.md  tasks.md
specs/004-progress-tracking/: spec.md  tasks.md
specs/005-cli/: spec.md  tasks.md
specs/006-python-bindings/: spec.md  tasks.md
specs/007-node-bindings/: spec.md  tasks.md
tests/: integration_tests.rs
tests/cve/: cve_2025_29787.rs  ghsa_2367_c296_3mp2.rs  ghsa_83g3_92jg_28cx.rs  mod.rs  rustsec_2026_0067.rs  rustsec_2026_0068.rs
tests/fixtures/: encrypted.7z  generate_7z_fixtures.sh  generate_zip_family_fixtures.sh  hardlink.7z  large-file.7z  mixed-extensions.7z  nested-dirs.7z  no-extension.7z  simple.7z  solid.7z  symlink-unix.7z
tests/fixtures/zip-family/: simple.apk  simple.epub  simple.vsix  simple.whl
tests/security/: hardlink_attack.rs  mod.rs  path_traversal.rs  symlink_escape.rs  zip_bomb.rs
