[workspace]
resolver = "2"
members = [
    "crates/exarch-core",
    "crates/exarch-python",
    "crates/exarch-node",
]

[workspace.package]
version = "0.1.0"
authors = ["Exarch Contributors"]
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rabax/exarch"
homepage = "https://github.com/rabax/exarch"
keywords = ["archive", "extraction", "security", "tar", "zip"]
categories = ["compression", "filesystem"]

[workspace.dependencies]
# Workspace crates
exarch-core = { path = "crates/exarch-core", version = "0.1.0" }

# Dependencies (sorted alphabetically)
criterion = "0.8"
flate2 = "1.1"
libc = "0.2"
napi = "3.8"
napi-build = "2.0"
napi-derive = "3.0"
proptest = "1.9"
pyo3 = "0.27"
tar = "0.4"
tempfile = "3.24"
thiserror = "2.0"
zip = { version = "7.0", default-features = false }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "warn"
unwrap_used = "warn"
# Allow for stub implementations (TODO: remove when implementing)
cast_precision_loss = "allow"
missing_const_for_fn = "allow"
no_effect_underscore_binding = "allow"
struct_excessive_bools = "allow"
unnecessary_literal_bound = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
