[workspace]
resolver = "2"
members = [
    "crates/exarch-core",
    "crates/exarch-python",
    "crates/exarch-node",
    "crates/exarch-cli",
]

[workspace.package]
version = "0.2.2"
authors = ["Exarch Contributors"]
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/exarch"
homepage = "https://github.com/bug-ops/exarch"
keywords = ["archive", "extraction", "security", "tar", "zip"]
categories = ["compression", "filesystem"]

[workspace.dependencies]
exarch-core = { path = "crates/exarch-core", version = "0.2.2" }
anyhow = "1.0"
assert_cmd = "2.1"
bzip2 = "0.6"
clap = "4.5"
clap_complete = "4.5"
console = "0.16"
criterion = "0.8"
dhat = "0.3"
flate2 = "1.1"
indicatif = "0.18"
libc = "0.2"
lru = "0.16"
napi = "3.8"
napi-build = "2.3"
napi-derive = "3.5"
predicates = "3.1"
proptest = "1.9"
pyo3 = "0.28"
rustc-hash = "2.1"
serde = "1.0"
serde_json = "1.0"
sevenz-rust2 = "0.20"
smallvec = "1.15"
tar = "0.4"
tempfile = "3.24"
thiserror = "2.0"
tokio = "1.49"
walkdir = "2.5"
xz2 = "0.1"
zip = { version = "7.2", default-features = false }
zstd = "0.13"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "warn"
unwrap_used = "warn"
cast_precision_loss = "allow"
missing_const_for_fn = "allow"
no_effect_underscore_binding = "allow"
struct_excessive_bools = "allow"
unnecessary_literal_bound = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[profile.dev]
opt-level = 0
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
