[package]
name = "exarch-cli"
description = "Command-line utility for secure archive extraction and creation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "exarch"
path = "src/main.rs"

[dependencies]
exarch-core.workspace = true
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
console.workspace = true
indicatif.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
