[package]
name = "exarch-cli"
description = "Command-line utility for secure archive extraction and creation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "exarch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "color"] }
clap_complete.workspace = true
console.workspace = true
exarch-core.workspace = true
indicatif = { workspace = true, features = ["improved_unicode"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
