[package]
name = "exarch-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Memory-safe archive extraction library with security validation"

[dependencies]
tar.workspace = true
zip.workspace = true
thiserror.workspace = true
flate2.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# Allow some lints for stub implementations
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
no_effect_underscore_binding = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
unnecessary_literal_bound = "allow"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[[bench]]
name = "extraction"
harness = false
