[package]
name = "exarch-core"
description = "Memory-safe archive extraction library with security validation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flate2.workspace = true
tar.workspace = true
thiserror.workspace = true
zip = { workspace = true, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bench]]
name = "extraction"
harness = false

[[bench]]
name = "validation"
harness = false
