[package]
name = "exarch-core"
description = "Memory-safe archive extraction library with security validation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bzip2.workspace = true
flate2.workspace = true
lru.workspace = true
sevenz-rust2.workspace = true
smallvec.workspace = true
tar.workspace = true
thiserror.workspace = true
walkdir.workspace = true
xz2.workspace = true
zip = { workspace = true, features = ["deflate", "deflate64", "bzip2", "zstd", "time"] }
zstd.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
dhat.workspace = true
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bench]]
name = "creation"
harness = false

[[bench]]
name = "extraction"
harness = false

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "progress"
harness = false
