[package]
name = "exarch-node"
description = "Node.js bindings for exarch-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
exarch-core.workspace = true
napi = { workspace = true, features = ["async", "napi4"] }
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true

[lints]
workspace = true
