[package]
name = "exarch-node"
description = "Node.js bindings for exarch-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
exarch-core.workspace = true
napi = { workspace = true, features = ["async", "napi4", "error_anyhow", "tokio_rt"] }
napi-derive.workspace = true
tokio = { workspace = true, features = ["rt"] }

[build-dependencies]
napi-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
