[package]
name = "exarch-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for exarch-core"

[lib]
name = "exarch"
crate-type = ["cdylib"]

[dependencies]
exarch-core = { path = "../exarch-core" }
pyo3.workspace = true

[features]
default = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3-py38"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
