[package]
name = "exarch-python"
description = "Python bindings for exarch-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "exarch"
crate-type = ["cdylib", "rlib"]

[dependencies]
exarch-core.workspace = true
pyo3 = { workspace = true, features = ["extension-module"] }

[features]
default = []
abi3 = ["pyo3/abi3-py39"]

[lints]
workspace = true
