[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "exarch"
version = "0.2.3"
description = "Memory-safe archive extraction library with built-in security validation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["archive", "extraction", "security", "tar", "zip", "gzip", "path-traversal", "zip-bomb"]
authors = [
    { name = "Exarch Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Compression",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bug-ops/exarch"
Repository = "https://github.com/bug-ops/exarch"
Documentation = "https://github.com/bug-ops/exarch#readme"
Issues = "https://github.com/bug-ops/exarch/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.0",
    "ruff>=0.8",
    "maturin>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.9"
strict = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
